feat: prepare projects for deploying into heroku
Took 4 hours 1 minute